--- a/style.css
+++ b/style.css
@@ -1,15 +1,79 @@
-.container-1 {
-  width: 400px;
-  margin: auto;
-  font-family: "Courier New", Courier, monospace;
+* {
+  margin: 0;
 }
 
-h1 {
-  color: blue;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100vh;
+  background: linear-gradient(to bottom, #ffcccc 0%, #de6868 100%);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.container-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 450px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: white;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  padding: 20px;
+  animation-name: container-1Bounce;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+}
+
+#title-todo {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 50px;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+#count-completed {
+  margin-bottom: 30px;
+}
+
+.input-field {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+#input-todo {
+  margin-right: 5px;
+  width: 200px;
+  font-size: 20px;
 }
 
 #button-add {
-  color: red;
+  font-size: 22px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+li span {
+  font-size: 25px;
+}
+
+.added {
+  animation-name: fadeInAdded;
+  animation-duration: 1s;
+  animation-timing-function: ease;
 }
 
 .completed {
@@ -17,12 +81,37 @@ h1 {
   text-decoration: line-through;
 }
 
-small {
+#input-alert {
   color: red;
-  font-size: 24;
+  font-size: 16px;
+  font-style: italic;
 }
 
 .trashcan {
   margin-left: 15px;
   cursor: pointer;
+}
+
+@keyframes fadeInAdded {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes container-1Bounce {
+  0% {
+    transform: translateY(-70%);
+  }
+  50% {
+    transform: translateY(30%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
