--- a/style.css
+++ b/style.css
@@ -115,3 +115,13 @@ li span {
     transform: translateY(0);
   }
 }
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
+.errorBlink {
+  animation: blinker 0.4s 3;
+}
