--- a/style.css
+++ b/style.css
@@ -8,8 +8,49 @@ body {
   align-items: flex-start;
   height: 100vh;
   background: linear-gradient(to bottom, #ffcccc 0%, #de6868 100%);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@keyframes fade-in-added {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-70%);
+  }
+  50% {
+    transform: translateY(30%);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes blink-three-times {
+  50% {
+    opacity: 0;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .container-1 {
@@ -23,7 +64,7 @@ body {
   margin-top: 20px;
   margin-bottom: 0px;
   padding: 20px;
-  animation-name: container-1Bounce;
+  animation-name: bounce;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
 }
@@ -33,26 +74,49 @@ body {
   font-size: 50px;
   margin-bottom: 15px;
   font-weight: bold;
+  animation: fade 1s ease;
 }
 
 #count-completed {
   margin-bottom: 30px;
+  animation: fade 1s ease;
 }
 
 .input-field {
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
+  animation: fade 1s ease;
 }
 
 #input-todo {
   margin-right: 5px;
   width: 200px;
   font-size: 20px;
+  outline: none;
+  animation: fade 1s ease;
+}
+
+#input-todo:hover {
+  border: solid 1px black;
+}
+
+#input-todo:focus {
+  border: 2px solid rgb(94, 160, 246);
 }
 
 #button-add {
   font-size: 22px;
+}
+
+.errorBlink {
+  animation: blink-three-times 0.4s 3;
+}
+
+.added {
+  animation-name: fade-in-added;
+  animation-duration: 1s;
+  animation-timing-function: ease;
 }
 
 ul {
@@ -64,27 +128,24 @@ li {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
-li span {
   font-size: 25px;
+  animation: fade 1s ease;
 }
 
-.added {
-  animation-name: fadeInAdded;
-  animation-duration: 1s;
-  animation-timing-function: ease;
-}
-
-.completed {
-  color: #888;
+li p:hover {
   text-decoration: line-through;
 }
 
-#input-alert {
-  color: red;
-  font-size: 16px;
-  font-style: italic;
+li p {
+  transition: 0.7s;
+}
+
+li span {
+  color: rgb(125, 125, 125);
+}
+
+li span:hover {
+  color: rgb(38, 37, 37);
 }
 
 .trashcan {
@@ -92,36 +153,14 @@ li span {
   cursor: pointer;
 }
 
-@keyframes fadeInAdded {
-  0% {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-
-  100% {
-    opacity: 1;
-  }
+.completed {
+  color: #888;
+  text-decoration: line-through;
+  
 }
 
-@keyframes container-1Bounce {
-  0% {
-    transform: translateY(-70%);
-  }
-  50% {
-    transform: translateY(30%);
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes blinker {
-  50% {
-    opacity: 0;
-  }
-}
-
-.errorBlink {
-  animation: blinker 0.4s 3;
+#input-alert {
+  color: red;
+  font-size: 16px;
+  font-style: italic;
 }
