--- a/style.css
+++ b/style.css
@@ -64,9 +64,8 @@ body {
   margin-top: 20px;
   margin-bottom: 0px;
   padding: 20px;
-  animation-name: bounce;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
+  animation: bounce 1s ease-in-out;
+ 
 }
 
 #title-todo {
